Guava migration - Use `.toList()`