@@ -40,7 +40,7 @@ public class AdventureQuestController implements Serializable {
                         continue;
                     }
                     for (EnemyData enemy : WorldData.getAllEnemies()) {
-                        List<String> candidateTags = Arrays.stream(enemy.questTags).collect(Collectors.toList());
+                        List<String> candidateTags = Arrays.stream(enemy.questTags).toList();
                         boolean match = true;
                         for (String targetTag : c.enemyTags) {
                             if (!candidateTags.contains(targetTag)) {
@@ -73,7 +73,7 @@ public class AdventureQuestController implements Serializable {
                     List<String> toBoost = new ArrayList<>();
                     if (c.mixedEnemies){
                         for (EnemyData enemy : localSpawns){
-                            List<String> candidateTags = Arrays.stream(enemy.questTags).collect(Collectors.toList());
+                            List<String> candidateTags = Arrays.stream(enemy.questTags).toList();
                             boolean match = true;
                             for (String targetTag : c.enemyTags) {
                                 if (!candidateTags.contains(targetTag)) {
